[gd_scene load_steps=7 format=1]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/1hgj_splash.smp" type="Sample" id=2]
[ext_resource path="res://assets/bg.jpeg" type="Texture" id=3]
[ext_resource path="res://assets/pbug_32.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scenes/Splash.tscn" type="PackedScene" id=5]

[sub_resource type="SampleLibrary" id=1]

samples/1hgj_splash = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="Background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 770.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="HideTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Cards" type="HBoxContainer" parent="."]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.2
margin/top = 0.722656
margin/right = 0.8
margin/bottom = 0.0
alignment = 1

[node name="FoodRequest" type="Label" parent="."]

anchor/left = 2
anchor/top = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.14375
margin/top = 0.252604
margin/right = 224.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.796078, 0.858824, 0.988235, 1 )
text = "Food request"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 279.0
margin/right = 294.0
margin/bottom = 313.0
custom_fonts/font = ExtResource( 4 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Splash" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


